[selectors] :focus-visible not matching on accessKey focus after focusing something via mouse https://bugs.webkit.org/show_bug.cgi?id=234077 <rdar://problem/86572561>

Reviewed by Antti Koivisto.

Source/WebCore:

This patch adds Element::focusForBindings() to differentitate when this is called from JavaScript.
If that's the case it pass a new FocusTrigger::Bindings value to Element::focus(),
so we can differentiate when this was called from some internal code or from JavaScript.

When Element::focus() has been called internally, we always want to show the focus ring
(thus pass FocusVisibility::Visible). However when it's called from a script
we'll set it to Visible or Invisible depending on if the previously focused element
was focused via mouse click or not (this is needed to pass
the css/selectors/focus-visible-script-focus-* tests from WPT repository).

Test: fast/selectors/focus-visible-accesskey.html

* dom/Element.cpp:
(WebCore::Element::focus):
(WebCore::Element::focusForBindings):
* dom/Element.h:
(WebCore::Element::focusForBindings):
* dom/FocusOptions.h:
* html/HTMLOrForeignElement.idl:

LayoutTests:

Writing an internal test as WPT tests for this don't work due to webkit.org/b/234139.

* fast/selectors/focus-visible-accesskey-expected.txt: Added.
* fast/selectors/focus-visible-accesskey.html: Added.



Canonical link: https://commits.webkit.org/245698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287563 268f45cc-cd09-0410-ab3c-d52691b4dbfc